# code-wiki

./: .gitignore  README.md  pyproject.toml
src/codewiki/: __init__.py  cli.py  config.py  constants.py
src/codewiki/core/: evolve.py  ingest.py  lint.py  query.py  scanner.py  watch.py
src/codewiki/git/: analyzer.py
src/codewiki/llm/: chunking.py  client.py  prompts.py
src/codewiki/wiki/: crossref.py  index.py  log.py  manager.py
tests/: conftest.py  test_cli.py  test_config.py  test_evolve.py  test_ingest.py  test_lint.py  test_query.py  test_scanner.py
